--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignores coverage folder
+/coverage
+
+# Ignores VSCode settings file
+/.vscode
