Replaces rubocop with standard, lints all

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,10 @@ jobs:
           PGHOST: localhost
           PGUSER: postgres
         run: bundle exec rspec spec
+      - name: Lint
+        working-directory: ${{env.api-dir}}
+        env:
+          RAILS_ENV: test
+          PGHOST: localhost
+          PGUSER: postgres
+        run: bundle exec rake standard
